[maven-release-plugin] prepare release v4.0.0-RC3

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -15,13 +15,12 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2cep-parent</artifactId>
-        <version>4.0.1-SNAPSHOT</version>
+        <version>4.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -143,11 +142,8 @@
                             <target>
                                 <!-- commenting "GetAllRolesOfUserEnabled" property to fix
                                 https://wso2.org/jira/browse/IDENTITY-3489 -->
-                                <echo message="########### Comment out GetAllRolesOfUserEnabled property ##############"/>
-                                <replace
-                                        file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/user-mgt.xml"
-                                        token="&lt;Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property&gt;"
-                                        value="&lt;!--Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property--&gt;"/>
+                                <echo message="########### Comment out GetAllRolesOfUserEnabled property ##############" />
+                                <replace file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/user-mgt.xml" token="&lt;Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property&gt;" value="&lt;!--Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property--&gt;" />
                             </target>
                         </configuration>
                     </execution>
@@ -159,114 +155,99 @@
                         </goals>
                         <configuration>
                             <target>
-                                <property name="tempdir" value="target/docs-temp"/>
-                                <property name="jardir" value="target/jardir"/>
-                                <mkdir dir="${tempdir}"/>
+                                <property name="tempdir" value="target/docs-temp" />
+                                <property name="jardir" value="target/jardir" />
+                                <mkdir dir="${tempdir}" />
                                 <unzip dest="${tempdir}">
                                     <fileset dir="target">
-                                        <include name="${project.artifactId}-${project.version}.zip"/>
+                                        <include name="${project.artifactId}-${project.version}.zip" />
                                     </fileset>
                                 </unzip>
-                                <copy todir="target/wso2carbon-core-${carbon.kernel.version}/repository/components"
-                                      overwrite="true">
-                                    <fileset
-                                            dir="${tempdir}/${project.artifactId}-${project.version}/repository/components">
+                                <copy todir="target/wso2carbon-core-${carbon.kernel.version}/repository/components" overwrite="true">
+                                    <fileset dir="${tempdir}/${project.artifactId}-${project.version}/repository/components">
                                     </fileset>
                                 </copy>
-                                <delete file="target/${project.artifactId}-${project.version}.zip"/>
-                                <delete dir="${tempdir}"/>
-                                <mkdir dir="${tempdir}"/>
+                                <delete file="target/${project.artifactId}-${project.version}.zip" />
+                                <delete dir="${tempdir}" />
+                                <mkdir dir="${tempdir}" />
                                 <unzip dest="${tempdir}">
-                                    <fileset
-                                            dir="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/">
-                                        <include name="*.ui*.jar"/>
+                                    <fileset dir="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/">
+                                        <include name="*.ui*.jar" />
                                     </fileset>
                                 </unzip>
                                 <move todir="${tempdir}/web/" includeemptydirs="false">
                                     <fileset dir="${tempdir}/web/">
-                                        <exclude name="**/yui/**"/>
-                                        <exclude name="**/ajax/**"/>
-                                        <exclude name="**/editarea/**"/>
-                                        <exclude name="**/codepress/**"/>
-                                        <exclude name="**/WEB-INF/**"/>
-                                        <include name="**/*.html"/>
+                                        <exclude name="**/yui/**" />
+                                        <exclude name="**/ajax/**" />
+                                        <exclude name="**/editarea/**" />
+                                        <exclude name="**/codepress/**" />
+                                        <exclude name="**/WEB-INF/**" />
+                                        <include name="**/*.html" />
                                     </fileset>
-                                    <mapper type="glob" from="*.html" to="*.xml"/>
+                                    <mapper type="glob" from="*.html" to="*.xml" />
                                 </move>
-                                <mkdir dir="src/site/xdoc"/>
+                                <mkdir dir="src/site/xdoc" />
                                 <copy todir="src/site/xdoc" overwrite="false" includeemptydirs="false">
                                     <fileset dir="${tempdir}/web">
-                                        <exclude name="**/yui/**"/>
-                                        <exclude name="**/ajax/**"/>
-                                        <exclude name="**/WEB-INF/**"/>
-                                        <exclude name="**/*.html"/>
-                                        <exclude name="**/*.js"/>
-                                        <exclude name="**/*.jsp"/>
-                                        <exclude name="**/*.xsl"/>
-                                        <exclude name="*.*"/>
+                                        <exclude name="**/yui/**" />
+                                        <exclude name="**/ajax/**" />
+                                        <exclude name="**/WEB-INF/**" />
+                                        <exclude name="**/*.html" />
+                                        <exclude name="**/*.js" />
+                                        <exclude name="**/*.jsp" />
+                                        <exclude name="**/*.xsl" />
+                                        <exclude name="*.*" />
                                     </fileset>
                                 </copy>
                                 <copy todir="src/site" overwrite="false" includeemptydirs="false">
                                     <fileset dir="../../docs">
-                                        <exclude name="**/images/**/*.*"/>
+                                        <exclude name="**/images/**/*.*" />
                                     </fileset>
                                     <filterset>
-                                        <filter token="buildNumber" value="${buildNumber}"/>
+                                        <filter token="buildNumber" value="${buildNumber}" />
                                     </filterset>
                                 </copy>
                                 <copy todir="src/site" overwrite="false" includeemptydirs="false">
                                     <fileset dir="../../docs">
-                                        <include name="**/images/**/*.*"/>
+                                        <include name="**/images/**/*.*" />
                                     </fileset>
                                 </copy>
                                 <copy todir="target/site/" overwrite="false" includeemptydirs="false">
                                     <fileset dir="src/site/xdoc/">
-                                        <include name="**/images/**/*.*"/>
+                                        <include name="**/images/**/*.*" />
                                     </fileset>
                                 </copy>
-                                <delete dir="src/site"/>
+                                <delete dir="src/site" />
 
                                 <!-- Sign all the jars in the distribution -->
-                                <taskdef resource="net/sf/antcontrib/antcontrib.properties"
-                                         classpathref="maven.plugin.classpath"/>
+                                <taskdef resource="net/sf/antcontrib/antcontrib.properties" classpathref="maven.plugin.classpath" />
                                 <if>
-                                    <equals arg1="${profile}" arg2="signJar"/>
+                                    <equals arg1="${profile}" arg2="signJar" />
                                     <then>
-                                        <signjar alias="wso2carbon"
-                                                 keystore="target/wso2carbon-core-${carbon.kernel.version}/repository/resources/security/wso2carbon.jks"
-                                                 storepass="wso2carbon" lazy="true">
-                                            <fileset
-                                                    dir="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins"
-                                                    includes="**/*.jar"/>
-                                            <fileset dir="target/wso2carbon-core-${carbon.kernel.version}/lib"
-                                                     includes="**/*.jar"/>
+                                        <signjar alias="wso2carbon" keystore="target/wso2carbon-core-${carbon.kernel.version}/repository/resources/security/wso2carbon.jks" storepass="wso2carbon" lazy="true">
+                                            <fileset dir="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins" includes="**/*.jar" />
+                                            <fileset dir="target/wso2carbon-core-${carbon.kernel.version}/lib" includes="**/*.jar" />
                                             <!--fileset
                                                     dir="target/wso2carbon-core-${carbon.kernel.version}/lib/api"
                                                     includes="**/*.jar"/-->
-                                            <fileset dir="target/wso2carbon-core-${carbon.kernel.version}/bin"
-                                                     includes="**/*.jar"/>
+                                            <fileset dir="target/wso2carbon-core-${carbon.kernel.version}/bin" includes="**/*.jar" />
                                             <!--fileset
                                                     dir="target/wso2carbon-core-${carbon.kernel.version}/lib/xboot"
                                                     includes="**/*.jar"/-->
-                                            <fileset dir="target/wso2carbon-core-${carbon.kernel.version}/lib/endorsed"
-                                                     includes="**/*.jar"/>
+                                            <fileset dir="target/wso2carbon-core-${carbon.kernel.version}/lib/endorsed" includes="**/*.jar" />
                                             <!--fileset
                                                     dir="target/wso2carbon-core-${carbon.kernel.version}/lib/core/WEB-INF/lib"
                                                     includes="**/*.jar"/-->
                                         </signjar>
                                     </then>
                                 </if>
-                                <delete dir="${tempdir}"/>
+                                <delete dir="${tempdir}" />
                                 <!-- Moving identity features downwards in management console UI -->
-                                <property name="tempdir2" value="target/identity-ui"/>
-                                <mkdir dir="${tempdir2}"/>
-                                <unzip src="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar"
-                                       dest="${tempdir2}"/>
-                                <replace file="${tempdir2}/META-INF/component.xml"
-                                         token="&lt;parent-menu&gt;identity_menu&lt;/parent-menu&gt;"
-                                         value="&lt;parent-menu&gt;configure_menu&lt;/parent-menu&gt;"/>
-                                <zip destfile="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar"
-                                     basedir="${tempdir2}"/>
+                                <property name="tempdir2" value="target/identity-ui" />
+                                <mkdir dir="${tempdir2}" />
+                                <unzip src="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar" dest="${tempdir2}" />
+                                <replace file="${tempdir2}/META-INF/component.xml" token="&lt;parent-menu&gt;identity_menu&lt;/parent-menu&gt;" value="&lt;parent-menu&gt;configure_menu&lt;/parent-menu&gt;" />
+                                <zip destfile="target/wso2carbon-core-${carbon.kernel.version}/repository/components/plugins/org.wso2.carbon.identity.account.mgt.menu.ui_${carbon.identity.version}.jar" basedir="${tempdir2}" />
                             </target>
                         </configuration>
                     </execution>
@@ -275,15 +256,15 @@
                         <phase>install</phase>
                         <configuration>
                             <target>
-                                <delete dir="target/archive-tmp"/>
-                                <delete dir="target/dependency-maven-plugin-markers"/>
-                                <delete dir="target/maven-archiver"/>
-                                <delete dir="target/wso2carbon-core-${carbon.kernel.version}"/>
-                                <delete file="target/${project.artifactId}-${project.version}.jar"/>
-                                <delete dir="target/sources"/>
-                                <delete dir="target/antrun/"/>
-                                <delete dir="target/site"/>
-                                <delete dir="target/identity-ui"/>
+                                <delete dir="target/archive-tmp" />
+                                <delete dir="target/dependency-maven-plugin-markers" />
+                                <delete dir="target/maven-archiver" />
+                                <delete dir="target/wso2carbon-core-${carbon.kernel.version}" />
+                                <delete file="target/${project.artifactId}-${project.version}.jar" />
+                                <delete dir="target/sources" />
+                                <delete dir="target/antrun/" />
+                                <delete dir="target/site" />
+                                <delete dir="target/identity-ui" />
                             </target>
                         </configuration>
                         <goals>
