--- a/pom.xml
+++ b/pom.xml
@@ -723,7 +723,7 @@
         <carbon.identity.version>5.0.7</carbon.identity.version>
         <carbon.registry.version>4.4.8</carbon.registry.version>
         <carbon.multitenancy.version>4.5.0</carbon.multitenancy.version>
-        <carbon.metrics.version>1.2.0</carbon.metrics.version>
+        <carbon.metrics.version>1.2.1-SNAPSHOT</carbon.metrics.version>
 
         <siddhi.version>3.0.5-SNAPSHOT</siddhi.version>
         <carbon.event-processing.version>2.0.12-SNAPSHOT</carbon.event-processing.version>
