--- a/pom.xml
+++ b/pom.xml
@@ -724,6 +724,7 @@
         <carbon.registry.version>4.4.8</carbon.registry.version>
         <carbon.multitenancy.version>4.5.0</carbon.multitenancy.version>
         <carbon.metrics.version>1.2.1-SNAPSHOT</carbon.metrics.version>
+        <carbon.ml.version>1.1.1</carbon.ml.version>
 
         <siddhi.version>3.0.5-SNAPSHOT</siddhi.version>
         <carbon.event-processing.version>2.0.12-SNAPSHOT</carbon.event-processing.version>
