--- a/pom.xml
+++ b/pom.xml
@@ -526,6 +526,17 @@
             </releases>
         </repository>
 
+        <!--<repository>-->
+            <!--<id>wso2.staging</id>-->
+            <!--<name>wso2 staging</name>-->
+            <!--<url>http://maven.wso2.org/nexus/content/repositories/orgwso2carbonmetrics-331/</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+                <!--<updatePolicy>daily</updatePolicy>-->
+                <!--<checksumPolicy>ignore</checksumPolicy>-->
+            <!--</releases>-->
+        <!--</repository>-->
+
     </repositories>
 
     <pluginRepositories>
@@ -723,7 +734,7 @@
         <carbon.identity.version>5.0.7</carbon.identity.version>
         <carbon.registry.version>4.4.8</carbon.registry.version>
         <carbon.multitenancy.version>4.5.0</carbon.multitenancy.version>
-        <carbon.metrics.version>1.2.1-SNAPSHOT</carbon.metrics.version>
+        <carbon.metrics.version>1.2.1</carbon.metrics.version>
         <carbon.ml.version>1.1.1</carbon.ml.version>
 
         <siddhi.version>3.0.5-SNAPSHOT</siddhi.version>
