--- a/pom.xml
+++ b/pom.xml
@@ -735,7 +735,7 @@
         <carbon.registry.version>4.4.8</carbon.registry.version>
         <carbon.multitenancy.version>4.5.0</carbon.multitenancy.version>
         <carbon.metrics.version>1.2.1</carbon.metrics.version>
-        <carbon.ml.version>1.1.1</carbon.ml.version>
+        <!--<carbon.ml.version>1.1.1</carbon.ml.version>-->
 
         <siddhi.version>3.0.5-SNAPSHOT</siddhi.version>
         <carbon.event-processing.version>2.0.12-SNAPSHOT</carbon.event-processing.version>
@@ -754,7 +754,7 @@
         <stratos.ui.version>2.2.0</stratos.ui.version>
         <rampart.wso2.version>1.6.1-wso2v14</rampart.wso2.version>
         <axis2.version>1.6.1.wso2v12</axis2.version>
-        <orbit.version.axiom>1.2.11.wso2v6</orbit.version.axiom>
+        <orbit.version.axiom>1.2.11.wso2v9</orbit.version.axiom>
         <version.commons.logging>1.1</version.commons.logging>
         <log4j.wso2.version>1.2.17.wso2v1</log4j.wso2.version>
         <httpclient.wso2.version>4.3.1.wso2v2</httpclient.wso2.version>
@@ -779,7 +779,7 @@
         <jetty.version>9.2.7.v20150116</jetty.version>
         <javax.websocket.api.version>1.0</javax.websocket.api.version>
         <junit.version>4.10</junit.version>
-        <gson.version>2.1</gson.version>
+        <gson.version>2.5</gson.version>
         <json.version>20090211</json.version>
         <jsonpath.version>0.9.1</jsonpath.version>
 
