--- a/pom.xml
+++ b/pom.xml
@@ -730,7 +730,7 @@
         <carbon.deployment.version>4.5.3</carbon.deployment.version>
         <carbon.commons.version>4.4.8</carbon.commons.version>
         <carbon.analytics-common.version>5.0.10-SNAPSHOT</carbon.analytics-common.version>
-        <carbon.dashboards.version>1.0.11-SNAPSHOT</carbon.dashboards.version>
+        <carbon.dashboards.version>1.0.11</carbon.dashboards.version>
         <carbon.identity.version>5.0.7</carbon.identity.version>
         <carbon.registry.version>4.4.8</carbon.registry.version>
         <carbon.multitenancy.version>4.5.0</carbon.multitenancy.version>
