--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2cep-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
