--- a/modules/samples/consumers/dashboard-service/pom.xml
+++ b/modules/samples/consumers/dashboard-service/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-consumers</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0</version>
     </parent>
 
     <artifactId>dashboard-service</artifactId>
