--- a/modules/samples/producers/wso2-event/pom.xml
+++ b/modules/samples/producers/wso2-event/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-producers</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.0</version>
     </parent>
 
     <artifactId>wso2-event-client</artifactId>
