--- a/modules/features/service/org.wso2.stratos.cep.dashboard.ui.feature/pom.xml
+++ b/modules/features/service/org.wso2.stratos.cep.dashboard.ui.feature/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>wso2stratos-cep-features</artifactId>
-        <version>4.1.0</version>
+        <version>4.1.1-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
