--- a/modules/samples/extensions/geo-event-fuser/pom.xml
+++ b/modules/samples/extensions/geo-event-fuser/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.wso2.cep</groupId>
         <artifactId>cep-samples-parent</artifactId>
-        <version>4.1.0</version>
+        <version>4.1.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
