--- a/modules/samples/utils/storm-dependencies-jar/pom.xml
+++ b/modules/samples/utils/storm-dependencies-jar/pom.xml
@@ -498,13 +498,13 @@
         <carbon.kernel.version>4.4.2</carbon.kernel.version>
 
         <!-- Carbon component dependency versions -->
-        <carbon.analytics.common.version>5.0.10-SNAPSHOT</carbon.analytics.common.version>
+        <carbon.analytics.common.version>5.0.10</carbon.analytics.common.version>
         <carbon.ml.version>1.1.1</carbon.ml.version>
         <carbon.metrics.version>1.1.0</carbon.metrics.version>
 
         <!--CEP versions-->
-        <siddhi.version>3.0.5-SNAPSHOT</siddhi.version>
-        <carbon.event.processing.version>2.0.12-SNAPSHOT</carbon.event.processing.version>
+        <siddhi.version>3.0.5</siddhi.version>
+        <carbon.event.processing.version>2.0.12</carbon.event.processing.version>
 
         <!-- Third party dependencies -->
         <libthrift.wso2.version>0.8.0.wso2v1</libthrift.wso2.version>
