--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <groupId>org.wso2.cep</groupId>
     <artifactId>wso2cep-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.1.0</version>
+    <version>4.1.1-SNAPSHOT</version>
     <name>WSO2 CEP - Parent</name>
     <url>http://wso2.com/products/complex-event-processor/</url>
     <description>WSO2 Complex Event Processor</description>
@@ -578,7 +578,7 @@
         <url>https://github.com/wso2/product-cep.git</url>
         <developerConnection>scm:git:https://github.com/wso2/product-cep.git</developerConnection>
         <connection>scm:git:https://github.com/wso2/product-cep.git</connection>
-        <tag>v4.1.0-RC2</tag>
+        <tag>HEAD</tag>
     </scm>
     <!--build>
         <plugins>
@@ -739,7 +739,7 @@
 
         <siddhi.version>3.0.5</siddhi.version>
         <carbon.event-processing.version>2.0.12</carbon.event-processing.version>
-        <cep.version>4.1.0</cep.version>
+        <cep.version>4.1.1-SNAPSHOT</cep.version>
         
         <!-- Carbon kernel version-->
         <carbon.kernel.version>4.4.3</carbon.kernel.version>
