refactorings for execution manager

--- a/modules/integration/tests-common/admin-clients/pom.xml
+++ b/modules/integration/tests-common/admin-clients/pom.xml
@@ -60,7 +60,7 @@
             <artifactId>org.wso2.carbon.event.publisher.stub</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.event-processing</groupId>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
             <artifactId>org.wso2.carbon.event.execution.manager.stub</artifactId>
         </dependency>
         <dependency>
