--- a/modules/samples/consumers/wso2-event/build.xml
+++ b/modules/samples/consumers/wso2-event/build.xml
@@ -36,9 +36,9 @@
             <include name="org.wso2.carbon.logging_*.jar"/>
             <include name="com.google.gson_*.jar"/>
             <include name="com.google.guava_*.jar"/>
-            <include name="libthrift_*.jar"/>
-            <include name="slf4j.log4j12_1.7.12.jar"/>
-            <include name="slf4j.api_1.7.12.jar"/>
+            <include name="libthrift_0.9.*.jar"/>
+            <include name="slf4j.log4j12_1.7.*.jar"/>
+            <include name="slf4j.api_1.6.*.jar"/>
             <include name="json_*.jar"/>
             <include name="org.wso2.carbon.databridge.commons.thrift_*.jar"/>
             <include name="org.wso2.carbon.databridge.commons.binary_*.jar"/>
